--- a/Desktop/gomycode/petwebsite/styles.css
+++ b/Desktop/gomycode/petwebsite/styles.css
@@ -1,54 +1,74 @@
 nav {
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 nav ul {
-    background-color: white;
-    border-radius: 30px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.15); /* Add shadow for visible border */
-    list-style: none;
-    display: flex;
-    padding: 10px 20px;
-    margin: 0;
-    justify-content: center;
-    gap: 20px;
-
-    
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); /* Add shadow for visible border */
+  list-style: none;
+  display: flex;
+  padding: 10px 20px;
+  margin: 0;
+  justify-content: center;
+  gap: 20px;
 }
-
 
 nav ul li a {
-    color: black;
-    font-weight: bold;
-    text-decoration: none;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
 }
-
-
 
 nav .button .btn {
-    background-color: black;
-    color: #fff;
-    padding: 5px 20px;
-    text-decoration: none;
-    border-radius: 30px;
+  background-color: black;
+  color: #fff;
+  padding: 5px 20px;
+  text-decoration: none;
+  border-radius: 30px;
+  margin-right: 40px;
 }
 nav .button .btn:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 50px 0;
-
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .hero .img {
-    width: 300px;
-    height: 500px;
-    max-width: 500px;
-    border-radius: 30px;
+  width: 600px;
+  height: 400px;
+  border-radius: 30px;
+  border-color: #fff;
+  margin-right: 40px;
+}
+.vocub {
+  padding-left: 20px;
+  margin-left: 40px;
+}
+.vocub h1 {
+  font-size: 2cm;
+  font-weight: bold;
+}
+.vocub .next-line {
+  display: block;
+  font-weight: normal;
+  margin-top: 3px;
+}
+.vocub p {
+  font-weight: normal;
+  font-size: xx-large;
+  display: block;
+}
+.hero .btn {
+  background-color: black;
+  color: #fff;
+  padding: 10px 30px;
+  text-decoration: none;
+  border-radius: 30px;
+  margin-top: 5px;
 }
